--- a/infohm/pom.xml
+++ b/infohm/pom.xml
@@ -10,6 +10,7 @@
 	
 	<properties>
 		<java.version>1.6</java.version>
+		<gson.version>2.3</gson.version>
 		<dagger.version>1.2.2</dagger.version>
 		<butterknife.version>5.1.2</butterknife.version>
 		<actionbarsherlock.version>4.4.0</actionbarsherlock.version>
@@ -33,6 +34,11 @@
 			<version>{$actionbarsherlock.version}</version>
 			<type>apklib</type>
 		</dependency> -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.jakewharton</groupId>
 			<artifactId>butterknife</artifactId>
