--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 	<application
 		android:name=".android.Application"
 		android:allowBackup="true"
-		android:icon="@drawable/ic_launcher"
+		android:icon="@drawable/launcher_main"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme">
 
