--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 		android:allowBackup="true"
 		android:icon="@drawable/launcher_main"
 		android:label="@string/app_name"
-		android:theme="@style/AppTheme">
+		android:theme="@style/Theme">
 
 		<activity
 			android:name=".android.activity.TestActivity"
