--- a/infohm/pom.xml
+++ b/infohm/pom.xml
@@ -31,10 +31,27 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.actionbarsherlock</groupId>
-			<artifactId>actionbarsherlock</artifactId>
-			<version>${actionbarsherlock.version}</version>
-			<type>apklib</type>
+			<groupId>com.android.support</groupId>
+			<artifactId>support-v4</artifactId>
+			<version>21.0.0</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>support-annotations</artifactId>
+					<groupId>com.android.support</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.android.support</groupId>
+			<artifactId>appcompat-v7</artifactId>
+			<version>21.0.0</version>
+			<type>aar</type>
+			<exclusions>
+				<exclusion>
+					<artifactId>support-annotations</artifactId>
+					<groupId>com.android.support</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -69,7 +86,7 @@
 				<configuration>
 					<sdk>
 						<path>${env.ANDROID_HOME}</path>
-						<platform>20</platform>
+						<platform>21</platform>
 					</sdk>
 					<run><debug>true</debug></run>
 				</configuration>
