--- a/infohm/pom.xml
+++ b/infohm/pom.xml
@@ -9,11 +9,16 @@
 	<name>InfOhm</name>
 
 	<properties>
+		<file.encoding>UTF-8</file.encoding>
 		<java.version>1.6</java.version>
 		<gson.version>2.3</gson.version>
+		<commons-codec.version>1.9</commons-codec.version>
 		<dagger.version>1.2.2</dagger.version>
 		<butterknife.version>5.1.2</butterknife.version>
 		<actionbarsherlock.version>4.4.0</actionbarsherlock.version>
+		<junit.version>4.8.1</junit.version>
+		<robolectric.version>2.4</robolectric.version>
+		<mockito.version>1.10.8</mockito.version>
 	</properties>
 
 	<repositories>
@@ -55,11 +60,6 @@
 			<type>aar</type>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>${gson.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>com.jakewharton</groupId>
 			<artifactId>butterknife</artifactId>
 			<version>${butterknife.version}</version>
@@ -74,6 +74,33 @@
 			<artifactId>dagger-compiler</artifactId>
 			<version>${dagger.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${commons-codec.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.robolectric</groupId>
+			<artifactId>robolectric</artifactId>
+			<version>${robolectric.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mockito.version}</version>
 		</dependency>
 	</dependencies>
 
