--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="de.ladis.infohm"
 	android:versionCode="1"
 	android:versionName="1.0">
+
+	<uses-permission android:name="android.permission.INTERNET" />
 
 	<uses-sdk
 		android:minSdkVersion="9"
@@ -13,6 +16,25 @@
 		android:icon="@drawable/launcher_main"
 		android:label="@string/app_name"
 		android:theme="@style/Theme">
+
+		<activity
+			android:name="de.ladis.infohm.android.activity.authentication.AuthenticationActivity"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+
+			<meta-data
+				android:name="android.app.default_searchable"
+				android:value="de.ladis.infohm.android.activity.search.SearchActivity" />
+		</activity>
+
+		<provider
+			android:name="de.ladis.infohm.android.content.sqlite.SqliteContentProvider"
+			android:authorities="de.ladis.infohm.provider"
+			android:exported="false" />
 
 	</application>
 
