--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
 				android:value="de.ladis.infohm.android.activity.search.SearchActivity" />
 		</activity>
 
+		<activity
+			android:name="de.ladis.infohm.android.activity.welcome.WelcomeActivity"
+			android:label="@string/app_name" />
+
 		<provider
 			android:name="de.ladis.infohm.android.content.sqlite.SqliteContentProvider"
 			android:authorities="de.ladis.infohm.provider"
