Adds entity base class
This class contains two fields for creation and update date/time of this
entity. For some entities it may be useful to derive from this class.

Updated publisher class to derive from this new base entity class. Also
modified equals method to take both new date/times into account when
comparing two publishers.

Updated parser and tests accordingly. The publisher parser will now
parse the creation and update date/times for each publisher. The tests
will now check the parsed value.

pom.xml has been updated to add a dependency to joda's time library.
This library will be used instead of java's implemented Date and
Calendar utility classes.

--- a/infohm/pom.xml
+++ b/infohm/pom.xml
@@ -14,6 +14,7 @@
 		<butterknife.version>5.1.2</butterknife.version>
 		<dagger.version>1.2.2</dagger.version>
 		<gson.version>2.3</gson.version>
+		<jodatime.version>2.5</jodatime.version>
 		<junit.version>4.8.1</junit.version>
 		<robolectric.version>2.4</robolectric.version>
 		<mockito.version>1.10.8</mockito.version>
@@ -77,6 +78,11 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>${jodatime.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
