--- a/infohm/pom.xml
+++ b/infohm/pom.xml
@@ -9,7 +9,7 @@
 	<name>InfOhm</name>
 
 	<properties>
-		<file.encoding>UTF-8</file.encoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.6</java.version>
 		<butterknife.version>5.1.2</butterknife.version>
 		<dagger.version>1.2.2</dagger.version>
