--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
 			android:name="de.ladis.infohm.android.activity.welcome.WelcomeActivity"
 			android:label="@string/app_name" />
 
+		<activity
+			android:name="de.ladis.infohm.android.activity.events.EventsActivity"
+			android:label="@string/app_name" />
+
 		<provider
 			android:name="de.ladis.infohm.android.content.sqlite.SqliteContentProvider"
 			android:authorities="de.ladis.infohm.provider"
