--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 	android:versionCode="1"
 	android:versionName="1.0">
 
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+	<uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
 	<uses-permission android:name="android.permission.INTERNET" />
 
 	<uses-sdk
@@ -11,25 +15,25 @@
 		android:targetSdkVersion="21" />
 
 	<application
-		android:name=".android.Application"
+		android:name="de.ladis.infohm.android.Application"
 		android:allowBackup="true"
 		android:icon="@drawable/launcher_main"
 		android:label="@string/app_name"
 		android:theme="@style/Theme">
 
 		<activity
-			android:name="de.ladis.infohm.android.activity.authentication.AuthenticationActivity"
+			android:name="de.ladis.infohm.android.activity.splash.SplashActivity"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-
-			<meta-data
-				android:name="android.app.default_searchable"
-				android:value="de.ladis.infohm.android.activity.search.SearchActivity" />
 		</activity>
+
+		<activity
+			android:name="de.ladis.infohm.android.activity.account.CreateAccountActivity"
+			android:label="@string/activity_create_account_label" />
 
 		<activity
 			android:name="de.ladis.infohm.android.activity.welcome.WelcomeActivity"
@@ -40,9 +44,38 @@
 			android:label="@string/app_name" />
 
 		<provider
-			android:name="de.ladis.infohm.android.content.sqlite.SqliteContentProvider"
+			android:name="de.ladis.infohm.android.component.content.ContentProvider"
 			android:authorities="de.ladis.infohm.provider"
 			android:exported="false" />
+
+		<service
+			android:name="de.ladis.infohm.android.component.account.AccountAuthenticator$Service"
+			android:exported="true">
+			<intent-filter>
+				<action android:name="android.accounts.AccountAuthenticator" />
+
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+
+			<meta-data
+				android:name="android.accounts.AccountAuthenticator"
+				android:resource="@xml/authenticator" />
+		</service>
+
+		<service
+			android:name="de.ladis.infohm.android.component.content.SyncAdapter$Service"
+			android:exported="true"
+			android:process=":sync">
+			<intent-filter>
+				<action android:name="android.content.SyncAdapter" />
+
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+
+			<meta-data
+				android:name="android.content.SyncAdapter"
+				android:resource="@xml/syncadapter" />
+		</service>
 
 	</application>
 
