--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -43,6 +43,16 @@
 			android:name="de.ladis.infohm.android.activity.main.MainActivity"
 			android:label="@string/app_name" />
 
+		<activity
+			android:name="de.ladis.infohm.android.activity.feedback.FeedbackActivity"
+			android:label="@string/activity_feedback_label"
+			android:parentActivityName="de.ladis.infohm.android.activity.main.MainActivity">
+
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="com.example.myfirstapp.MainActivity" />
+		</activity>
+
 		<provider
 			android:name="de.ladis.infohm.android.component.content.ContentProvider"
 			android:authorities="de.ladis.infohm.provider"
