--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
 
 		<activity
 			android:name="de.ladis.infohm.android.activity.splash.SplashActivity"
+			android:launchMode="singleTop"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -33,10 +34,12 @@
 
 		<activity
 			android:name="de.ladis.infohm.android.activity.account.CreateAccountActivity"
+			android:launchMode="singleTop"
 			android:label="@string/activity_create_account_label" />
 
 		<activity
 			android:name="de.ladis.infohm.android.activity.main.MainActivity"
+			android:launchMode="singleTop"
 			android:label="@string/app_name" />
 
 		<activity
