--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
 
 		<activity
 			android:name="de.ladis.infohm.android.activity.publisher.StarPublisherActivity"
-			android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:parentActivityName="de.ladis.infohm.android.activity.main.MainActivity">
 
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -61,7 +62,10 @@
 				android:value="de.ladis.infohm.android.activity.main.MainActivity" />
 		</activity>
 
-		<activity android:name="de.ladis.infohm.android.activity.search.SearchActivity">
+		<activity
+			android:name="de.ladis.infohm.android.activity.search.SearchActivity"
+			android:label="@string/activity_search_label"
+			android:parentActivityName="de.ladis.infohm.android.activity.main.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
 			</intent-filter>
