--- a/infohm/src/main/AndroidManifest.xml
+++ b/infohm/src/main/AndroidManifest.xml
@@ -54,6 +54,16 @@
 		</activity>
 
 		<activity
+			android:name="de.ladis.infohm.android.activity.meal.MealsActivity"
+			android:label="@string/app_name"
+			android:parentActivityName="de.ladis.infohm.android.activity.main.MainActivity">
+
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="de.ladis.infohm.android.activity.main.MainActivity" />
+		</activity>
+
+		<activity
 			android:name="de.ladis.infohm.android.activity.feedback.FeedbackActivity"
 			android:label="@string/activity_feedback_label"
 			android:parentActivityName="de.ladis.infohm.android.activity.main.MainActivity">
